Cambios en las categorías y las Subcategrías

--- a/index.html
+++ b/index.html
@@ -57,9 +57,34 @@
 
           <h1 class="my-4">Categorías</h1>
           <div class="list-group">
-            <a href="#" class="list-group-item">Harinas</a>
-            <a href="#" class="list-group-item">Embutidos</a>
-            <a href="#" class="list-group-item">Cárnicos</a>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Harinas
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Maíz</a>
+                    <a class="dropdown-item" href="#">Trigo</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Embutidos
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Jamón</a>
+                    <a class="dropdown-item" href="#">Jamón Serrano</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Carnes
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Res</a>
+                    <a class="dropdown-item" href="#">Avícola</a>
+                    <a class="dropdown-item" href="#">Cerdo</a>
+                </div>
+            </div>
           </div>
 
         </div>
